name:                reflex-orphans
version:             0.1
synopsis:            Additional instances for Reflex datatypes.
license:             BSD3
license-file:        LICENSE
author:              davean
maintainer:          davean@xkcd.com
copyright:           Copyright (C) 2016 davean
category:            FRP
build-type:          Simple
cabal-version:       >=1.10
source-repository head
  type: git
  location: http://git.xkrd.net/davean/reflex-orphans.git

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:
          Reflex.Orphans
  build-depends:
        base >=4.8 && <5
      , reflex >= 0.4
      , these >= 0.4

test-suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: test.hs
  build-depends:
        base >= 4.8 && < 5
      , tasty == 0.11.*
      , tasty-hunit == 0.9.*
      , reflex
      , reflex-orphans
      , dependent-map
      , ref-tf
      , mtl
